try to fix "Punkt hinzufügen" visual bug on mobile -v13
try to fix "Punkt hinzufügen" visual bug on mobile -v12

try to fix "Punkt hinzufügen" visual bug on mobile -v11

try to fix "Punkt hinzufügen" visual bug on mobile -v10

try to fix "Punkt hinzufügen" visual bug on mobile -v9

try to fix "Punkt hinzufügen" visual bug on mobile -v8

try to fix "Punkt hinzufügen" visual bug on mobile -v7

try to fix "Punkt hinzufügen" visual bug on mobile -v5

try to fix "Punkt hinzufügen" visual bug on mobile -v5

try to fix "Punkt hinzufügen" visual bug on mobile -v4

try to fix "Punkt hinzufügen" visual bug on mobile -v2

try to fix "Punkt hinzufügen" visual bug on mobile -v2

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -13,5 +13,5 @@ button {
 }
 
 #bugapointmenu {
-
+  height: fit-content;
 }
